# FreeImageRe

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Readme.md
.github/workflows/: build_gnulinux.yml  build_windows_msvc.yml  cmake-multi-platform.yml
Source/: CMakeLists.txt  CacheFile.h  FreeImage.h  FreeImage.hpp  MapIntrospector.h  Quantizers.h  ToneMapping.h  Utilities.h
Source/FreeImage/: BitmapAccess.cpp  CacheFile.cpp  ColorLookup.cpp  Conversion.cpp  Conversion16_555.cpp  Conversion16_565.cpp  Conversion24.cpp  Conversion32.cpp  Conversion4.cpp  Conversion8.cpp  ConversionColor.cpp  ConversionFloat.cpp  ConversionRGB16.cpp  ConversionRGBA16.cpp  ConversionRGBAF.cpp  ConversionRGBF.cpp  ConversionType.cpp  ConversionUINT16.cpp  ConversionYUV.cpp  ConversionYUV.h  FreeImage.cpp  FreeImageIO.cpp  FreeImagePy.cpp  GetType.cpp  Halftoning.cpp  J2KHelper.cpp  LFPQuantizer.cpp  MNGHelper.cpp  MemoryIO.cpp  MultiPage.cpp  NNQuantizer.cpp  PSDParser.cpp  PSDParser.h  PixelAccess.cpp  Plugin.cpp  Plugin.h  PluginBMP.cpp  PluginCUT.cpp  PluginDDS.cpp  PluginEXR.cpp  (+40 more)
Source/FreeImageToolkit/: BSplineRotate.cpp  Background.cpp  Channels.cpp  ClassicRotate.cpp  Colors.cpp  CopyPaste.cpp  Display.cpp  Filters.h  Flip.cpp  JPEGTransform.cpp  MultigridPoissonSolver.cpp  Rescale.cpp  Resize.cpp  Resize.h
Source/Metadata/: Exif.cpp  FIRational.cpp  FIRational.h  FreeImageTag.cpp  FreeImageTag.h  IPTC.cpp  TagConversion.cpp  TagLib.cpp  XTIFF.cpp
Source/Plugins/: J2KHelper.cpp  PSDParser.cpp  PSDParser.h  PluginBMP.cpp  PluginCUT.cpp  PluginDDS.cpp  PluginEXR.cpp  PluginG3.cpp  PluginGIF.cpp  PluginHDR.cpp  PluginHEIF.cpp  PluginICO.cpp  PluginIFF.cpp  PluginJ2K.cpp  PluginJP2.cpp  PluginJPEG.cpp  PluginJPEGXL.cpp  PluginJXR.cpp  PluginPCD.cpp  PluginPCX.cpp  PluginPFM.cpp  PluginPICT.cpp  PluginPNG.cpp  PluginPNM.cpp  PluginRAS.cpp  PluginRAW.cpp  PluginSGI.cpp  PluginTARGA.cpp  PluginTIFF.cpp  PluginWBMP.cpp  PluginWebP.cpp  PluginXBM.cpp  PluginXPM.cpp  XTIFF.cpp
TestAPI/: CMakeLists.txt  MainTestSuite.cpp  TestSuite.h  clone.tif  exif.avif  exif.heic  exif.jxl  exif_599.jxl  exif_rgba.jxl  mpage-mstream-redirect.tif  mpage-mstream.tif  page0.TIFF  page1.TIFF  page2.TIFF  redirect-stream.tif  sample.tif  testChannels.cpp  testColorFunctions.cpp  testConversionColor.cpp  testConversionFloat.cpp  testHeaderOnly.cpp  testHeif.cpp  testImageType.cpp  testJPEG.cpp  testJPEGXL.cpp  testMPage.cpp  testMPageMemory.cpp  testMPageStream.cpp  testMemIO.cpp  testPlugins.cpp  testThumbnail.cpp  testTmo.cpp  testTools.cpp  testWrappedBuffer.cpp
cmake/: dependency.brotli.cmake  dependency.common.functions.cmake  dependency.dav1d.cmake  dependency.de265.cmake  dependency.heif.cmake  dependency.highway.cmake  dependency.imath.cmake  dependency.jpeg.cmake  dependency.jpegxl.cmake  dependency.kvazaar.cmake  dependency.lcms2.cmake  dependency.openexr.cmake  dependency.openjpeg.cmake  dependency.openjph.cmake  dependency.png.cmake  dependency.pybind.cmake  dependency.raw.cmake  dependency.svtav1.cmake  dependency.tiff.cmake  dependency.webp.cmake  dependency.yato.cmake  dependency.zlib.cmake  external_project_common.cmake
cmake/libheif/: 0001-Added-extra-CMAKE-flags-for-linking-plugins-statical.patch
cmake/libjpeg/: CMakeLists.txt
cmake/libjpegxl/: 0001-Added-support-of-debug-libraries-for-hwy-brotli-and-.patch
cmake/libraw/: CMakeLists.txt
